[package]
name = "stat-tracker-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
chrono = "0.4.23"
itertools = "0.10.5"
lazy_static = "1.4.0"
plotters = "0.3.4"
question = "0.2.2"
serde_json = "1.0.92"
titlecase = "2.2.1"

[dependencies.serde]
version = "1.0.152"
features = ["derive"]

[dependencies.tokio]
version = "1.21.2"
features = ["macros", "signal", "rt-multi-thread"]

[dependencies.serenity]
version = "0.11"
default-features = false
features = ["client", "gateway", "rustls_backend", "model"]